Bug 443157 - Haruna doesn't set the proper title in the media player widget
Summary: Haruna doesn't set the proper title in the media player widget
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.7.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-30 10:11 UTC by Bart Ribbers
Modified: 2021-09-30 16:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2021-09-30 10:11:54 UTC
Currently when watching for example a Youtube video, the media is called "watch?v=<video id>" rather than the title as shown on Youtube itself. You can observe this behaviour in the media player widget.
Comment 1 george fb 2021-09-30 16:31:49 UTC
Git commit 82f73fd89bbb37d703fc387f5249471f0ff7bd45 by George Florea Bănuș.
Committed on 30/09/2021 at 16:30.
Pushed by georgefb into branch 'master'.

fix(mpris): only show filename if there's no title

M  +7    -4    src/mpris2/mediaplayer2player.cpp

https://invent.kde.org/multimedia/haruna/commit/82f73fd89bbb37d703fc387f5249471f0ff7bd45