fix(mpris): only show filename if there's no title

BUG: 443157